@@ -44,16 +44,33 @@ my $svgExperimentalSupport = 1;
 my $xpathSupport = 1;
 my $xsltSupport = 1;
 my $coverageSupport = 0;
-my $colorSupport = 1; # Default: colorize make output
 my $videoSupport = 1;
+my $showHelp = 0;
+
+my $programName = basename($0);
+my $usage = <<EOF;
+Usage: $programName [options] [options to pass to build system]
+  --help                        Show this help message
+  --[no-]svg                    Toggle SVG support (default: $svgSupport)
+  --[no-]svg-experimental       Toggle experimental SVG features (default: $svgExperimentalSupport, implies SVG Support)
+  --[no-]xpath                  Toggle XPath support (default: $xpathSupport)
+  --[no-]xslt                   Toggle XSLT support (default: $xsltSupport)
+  --[no-]video                  Toggle Video support (default: $videoSupport)
+  --[no-]coverage               Toggle code coverage support (default: $coverageSupport)
+EOF
 
 GetOptions('svg!' => \$svgSupport,
            'svg-experimental!' => \$svgExperimentalSupport,
            'xpath!' => \$xpathSupport,
            'xslt!' => \$xsltSupport,
            'video!' => \$videoSupport,
-           'coverage!' => \$coverageSupport,    
-           'color!' => \$colorSupport);
+           'coverage!' => \$coverageSupport,
+           'help' => \$showHelp);
+
+if ($showHelp) {
+   print STDERR $usage;
+   exit 1;
+}
 
 $svgExperimentalSupport = 0  unless $svgSupport;
 
@@ -128,13 +145,13 @@ for my $dir (@projects) {
             next;
         }
 
-        $result = buildQMakeGtkProject($dir, $colorSupport);
+        $result = buildQMakeGtkProject($dir);
     } elsif (isQt()) {
         if ($dir ne "WebKit") {
             chdir ".." or die;
             next;
         }
-        $result = buildQMakeProject($dir, $colorSupport);
+        $result = buildQMakeProject($dir);
     } elsif (isOSX()) {
         $result = system "xcodebuild", "-project", "$dir.xcodeproj", @options, $overrideFeatureDefinesString, @coverageSupportOption, @ARGV;
     } elsif (isCygwin()) {
